force-app/main/default/objects/Case/fields/Account_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Account_Cost_Center__c</fullName>
    <description>Henter Cost Center fra Account</description>
    <formula>Account.Cost_Center_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Cost Center</label>
    <type>Text</type>
</CustomField>