force-app/main/default/objects/Case/fields/Account_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Account_Deactivated__c</fullName>
    <formula>Account.Deactivated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Deactivated</label>
    <type>Checkbox</type>
</CustomField>