force-app/main/default/objects/Case/fields/Account_XGL__c.field-meta.xml
<CustomField>
    <fullName>Account_XGL__c</fullName>
    <description>Henter XGL fra account</description>
    <formula>Account.XGL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account XGL</label>
    <type>Text</type>
</CustomField>