force-app/main/default/objects/Case/fields/Attached_Files__c.field-meta.xml
<CustomField>
    <fullName>Attached_Files__c</fullName>
    <inlineHelpText>These files are available from the account this Case is related to in the &quot;Files&quot; related list.</inlineHelpText>
    <label>Attached Files</label>
    <type>TextArea</type>
</CustomField>