force-app/main/default/objects/Case/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used for process builder to bypass validation rule.</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>