force-app/main/default/objects/Case/fields/Case_Invoicable__c.field-meta.xml
<CustomField>
    <fullName>Case_Invoicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Invoicable</label>
    <type>Checkbox</type>
</CustomField>