force-app/main/default/objects/Case/fields/Case_Queue_Flow__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Flow__c</fullName>
    <label>Case Queue Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Maritim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>