force-app/main/default/objects/Case/fields/Confirm_Closing_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Closing_Parent_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Closing Parent Case</label>
    <type>Checkbox</type>
</CustomField>