force-app/main/default/objects/Case/fields/created_at_for_audit__c.field-meta.xml
<CustomField>
    <fullName>created_at_for_audit__c</fullName>
    <label>Created At Audit</label>
    <type>DateTime</type>
</CustomField>