force-app/main/default/objects/Case/fields/Description_chat__c.field-meta.xml
<CustomField>
    <fullName>Description_chat__c</fullName>
    <description>Description field used in live chat for support</description>
    <inlineHelpText>Description of the issue / subject</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>