force-app/main/default/objects/Case/fields/Desk_Id__c.field-meta.xml
<CustomField>
    <fullName>Desk_Id__c</fullName>
    <description>Desk Id Value</description>
    <label>Desk Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>