force-app/main/default/objects/Case/fields/DESKSCMT__Desk_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Case_Id__c</fullName>
    <description>Desk Id Value</description>
    <label>Desk Case Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>