force-app/main/default/objects/Case/fields/DESKSCMT__Desk_Connect_Sync__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Connect_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Synced via Desk Connect?</description>
    <label>Desk Connect Sync</label>
    <type>Checkbox</type>
</CustomField>