force-app/main/default/objects/Case/fields/Email_Notification_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification Owner</label>
    <type>Checkbox</type>
</CustomField>