force-app/main/default/objects/Case/fields/ERP_Area__c.field-meta.xml
<CustomField>
    <fullName>ERP_Area__c</fullName>
    <inlineHelpText>what ERP Area is this case related to?</inlineHelpText>
    <label>ERP Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Area</valueSetName>
    </valueSet>
</CustomField>