force-app/main/default/objects/Case/fields/ERP_system__c.field-meta.xml
<CustomField>
    <fullName>ERP_system__c</fullName>
    <formula>Account.ERP_System__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP system</label>
    <type>Text</type>
</CustomField>