force-app/main/default/objects/Case/fields/File_Description_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>File_Description_Case_Flow__c</fullName>
    <description>Field populated by create case flow/process.</description>
    <inlineHelpText>Description to the files attached to this case provided by the user who created it.</inlineHelpText>
    <label>File Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>