force-app/main/default/objects/Case/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <formula>TEXT(Account.Firm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm</label>
    <type>Text</type>
</CustomField>