force-app/main/default/objects/Case/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <formula>IF(ISBLANK(Attached_Files__c),False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Attachment(s)</label>
    <type>Checkbox</type>
</CustomField>