force-app/main/default/objects/Case/fields/Is_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Case__c</fullName>
    <formula>IF(Of_Child_Cases__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Case</label>
    <type>Checkbox</type>
</CustomField>