force-app/main/default/objects/Case/fields/labels__c.field-meta.xml
<CustomField>
    <fullName>labels__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Labels</label>
    <type>TextArea</type>
</CustomField>