force-app/main/default/objects/Case/fields/Last_Customer_Communication__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Communication__c</fullName>
    <label>Last Customer Communication</label>
    <type>DateTime</type>
</CustomField>