force-app/main/default/objects/Case/fields/Of_Child_Cases__c.field-meta.xml
<CustomField>
    <fullName>Of_Child_Cases__c</fullName>
    <description>Used by Parent Child Case Flow.</description>
    <label># Of Child Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>