force-app/main/default/objects/Case/fields/Oppdragsansvarlig__c.field-meta.xml
<CustomField>
    <fullName>Oppdragsansvarlig__c</fullName>
    <formula>Account.Assignment_Responsible__r.FirstName +&quot; &quot;+  Account.Assignment_Responsible__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppdragsansvarlig</label>
    <type>Text</type>
</CustomField>