force-app/main/default/objects/Case/fields/Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreement__c</fullName>
    <formula>Account.Price_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Agreement</label>
    <type>Text</type>
</CustomField>