force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instructions not clear (Need more info)</fullName>
            </value>
            <value>
                <fullName>Existing problem</fullName>
            </value>
            <value>
                <fullName>Standard service</fullName>
            </value>
            <value>
                <fullName>Standard reply</fullName>
            </value>
            <value>
                <fullName>Basic functionality</fullName>
            </value>
            <value>
                <fullName>Complex functionality</fullName>
            </value>
            <value>
                <fullName>Use new functionality</fullName>
            </value>
            <value>
                <fullName>New problem</fullName>
            </value>
            <value>
                <fullName>Change request</fullName>
            </value>
            <value>
                <fullName>Problem sent Xledger</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Acceptanse testing</fullName>
            </value>
            <value>
                <fullName>Problem - sent Xledger</fullName>
            </value>
            <value>
                <fullName>Change request (N)</fullName>
            </value>
            <value>
                <fullName>Other Tier 1 case</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>VIEW Connect</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>