force-app/main/default/objects/Case/fields/resolved_at__c.field-meta.xml
<CustomField>
    <fullName>resolved_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>