force-app/main/default/objects/Case/fields/Support_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Support_Agreement__c</fullName>
    <formula>Account.Support_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Agreement</label>
    <type>Text</type>
</CustomField>