force-app/main/default/objects/Case/fields/Xledger_case_number__c.field-meta.xml
<CustomField>
    <fullName>Xledger_case_number__c</fullName>
    <formula>HYPERLINK(&quot;https://support.xledger.net/hc/no/requests/&quot;&amp;   Xledger_case_number_input__c  , &quot;Link til saken&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xledger case number</label>
    <type>Text</type>
</CustomField>