force-app/main/default/objects/Case/fields/Xledger_case_number_input__c.field-meta.xml
<CustomField>
    <fullName>Xledger_case_number_input__c</fullName>
    <label>Xledger case number (input)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>