force-app/main/default/objects/Case/fields/Xledger_case_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Xledger_case_URL_1__c</fullName>
    <defaultValue>&quot;https://support.xledger.net/hc/no/requests/&quot;</defaultValue>
    <label>Xledger case URL</label>
    <type>Url</type>
</CustomField>