force-app/main/default/objects/Case/fields/Xledger_Issue__c.field-meta.xml
<CustomField>
    <fullName>Xledger_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Problems and bugs in the Xledger software</description>
    <label>Xledger Issue</label>
    <type>Checkbox</type>
</CustomField>