force-app/main/default/objects/Case/recordTypes/Danish_Support.recordType-meta.xml
<RecordType>
    <fullName>Danish_Support</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Danish Support</label>
</RecordType>