force-app/main/default/objects/Case/recordTypes/Desk_Migrated_Cases.recordType-meta.xml
<RecordType>
    <fullName>Desk_Migrated_Cases</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Desk - Migrated Cases</label>
</RecordType>