force-app/main/default/objects/Case/recordTypes/Maritime_Support.recordType-meta.xml
<RecordType>
    <fullName>Maritime_Support</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Maritime Support</label>
</RecordType>