force-app/main/default/objects/Case/recordTypes/Norway_Support.recordType-meta.xml
<RecordType>
    <fullName>Norway_Support</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Norway Support</label>
</RecordType>