force-app/main/default/objects/Case/recordTypes/Sweden_Support.recordType-meta.xml
<RecordType>
    <fullName>Sweden_Support</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Sweden Support</label>
</RecordType>