force-app/main/default/objects/Case/validationRules/Validat_ERP_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Validat_ERP_Area</fullName>
    <active>true</active>
    <description>If ERP Area is X-Ledger this should be a mandatory field</description>
    <errorConditionFormula>ISNEW()
&amp;&amp; 
ERP_system__c  = &quot;Xledger&quot;  
&amp;&amp; 
ISPICKVAL(ERP_Area__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Pls fill in ERP AREA</errorMessage>
</ValidationRule>