force-app/main/default/objects/Case/validationRules/Validate_on_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_on_Status</fullName>
    <active>false</active>
    <errorConditionFormula>Bypass_Validation_Rule__c = False 
&amp;&amp;
ISPICKVAL(Status, &quot;Awaiting Response/ In Progress&quot;) ||
ISPICKVAL(Status, &quot;Response Received&quot;)</errorConditionFormula>
    <errorMessage>Status &quot;Awaiting Respons/ In Progress&quot; and &quot;Respons Received&quot; is set by automated process.</errorMessage>
</ValidationRule>