force-app/main/default/objects/Case/listViews/All_cases_2.listView-meta.xml
<ListView>
    <fullName>All_cases_2</fullName>
    <columns>Desk_Id__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CASE_NUMBER</field>
        <operation>equals</operation>
        <value>00072346</value>
    </filters>
    <label>All cases.</label>
</ListView>