force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Support_Agreement__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Of_Child_Cases__c</columns>
    <columns>Is_Parent_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Desk_Migrated_Cases,Case.Norway_Support</value>
    </filters>
    <label>VL All Open Cases</label>
</ListView>