force-app/main/default/objects/Case/listViews/DESKSCMT__Migrated_Cases.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Migrated_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Desk_Id__c</columns>
    <columns>labels__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Desk_Migrated_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Migrated Cases</label>
</ListView>