force-app/main/default/objects/Case/listViews/Fagsupport_All_cases.listView-meta.xml
<ListView>
    <fullName>Fagsupport_All_cases</fullName>
    <columns>Desk_Id__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Fagsupport</value>
    </filters>
    <label>Fagsupport - All cases</label>
</ListView>