force-app/main/default/objects/Case/listViews/Migrated_Cases_VL_Open_cases.listView-meta.xml
<ListView>
    <fullName>Migrated_Cases_VL_Open_cases</fullName>
    <booleanFilter>(1 AND 2) AND (3 AND 4 AND 5 AND 6) AND 7 AND 8</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>labels__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Desk_Id__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Desk_Migrated_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>haugane</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>dagsgard</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>krogset</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>haagensen</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Desk_Migrated_Cases</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>norway</value>
    </filters>
    <label>Migrated Cases-VL Open cases-Unassigned</label>
</ListView>