force-app/main/default/objects/Case/listViews/Migrated_Cases_VM_Open_cases.listView-meta.xml
<ListView>
    <fullName>Migrated_Cases_VM_Open_cases</fullName>
    <booleanFilter>(1 AND 2) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ERP_Area__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Desk_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Desk_Migrated_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>haugane</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>dagsgard</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>krogset</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>haagensen</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>herstad</value>
    </filters>
    <label>Migrated Cases - VM Open cases</label>
</ListView>