force-app/main/default/objects/Case/listViews/RPA_New_Cases.listView-meta.xml
<ListView>
    <fullName>RPA_New_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Support_Agreement__c</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.REASON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Norway_Support</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>startsWith</operation>
        <value>Automation Case | RPA</value>
    </filters>
    <label>RPA New Cases</label>
</ListView>